feat: add basic command with assets required and outline of command actions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-tale",
 	"version": "0.0.1",
+	"bin": "./bin/command.js",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
